package Decorator;

public class Invisibility {

    public int getScore() {
        return 22;
    }

    public String getDescription() {
        return "\nInvisibility";
    }

}