package Decorator;

public class Teleportation {
    public int getScore() {
        return 20;
    }

    public String getDescription() {
        return "\nTeleportation";
    }
}
