package Decorator;

public class TimeTravel {
    public int getScore() {
        return 20;
    }

    public String getDescription() {
        return "\nTimeTravel";
    }
}
